Fix vertical alignment between block-button and block-text on the left

--- a/_sass/0768_md/_block_md.scss
+++ b/_sass/0768_md/_block_md.scss
@@ -310,6 +310,7 @@
     .block-textonly {
       padding-top: 1rem;
       margin-bottom: 1rem;
+      margin: auto;
       &:last-child {
         margin-bottom: 0rem;
       }
